# SecureMCP-Servers

TEST_SERVERS/PORTED_TO_SECUREMCP/Arxiv-mcp-suite/: test-smart-client.py
TEST_SERVERS/PORTED_TO_SECUREMCP/MCP-server-postgres/: README.md  client.py  main.py  pyproject.toml
TEST_SERVERS/PORTED_TO_SECUREMCP/alibabacloud-rds-openapi-mcp-server/: MIGRATION.md  README.md  README_CN.md  client-test-macaw.py  pyproject.toml
TEST_SERVERS/PORTED_TO_SECUREMCP/arxiv-mcp-server/: Dockerfile  MIGRATION.txt  README.md  SECURITY.md  client-test-macaw.py  pyproject.toml  server.json  smithery.yaml
TEST_SERVERS/PORTED_TO_SECUREMCP/bicscan-mcp/: MIGRATION.txt  README.md  client-test-macaw.py
TEST_SERVERS/PORTED_TO_SECUREMCP/chroma-mcp/: client-test-macaw.py
TEST_SERVERS/PORTED_TO_SECUREMCP/conan-mcp/: .gitignore  MIGRATION.txt  README.md  client-test-macaw.py
TEST_SERVERS/PORTED_TO_SECUREMCP/datacloud-mcp-query/: .gitignore  CLAUDE.md  MIGRATION.txt  QUICK_START.md  README.md  auth_factory.py  auth_interface.py  client-test-macaw.py  connect_api_dc_sql.py  oauth.py  requirements.txt  server.py  sf_cli_auth.py
TEST_SERVERS/PORTED_TO_SECUREMCP/dingo/: .gitignore  AGENTS.md  MIGRATION.txt  README.md  README_ja.md  README_mcp.md  README_mcp_ja.md  README_mcp_zh-CN.md  README_zh-CN.md  SKILL.md  mcp_server.py  (+3 more)
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-3rdparty.csv  NOTICE  README.md  RELEASE_NOTES.md  SKILL.md  client-test-macaw-operator.py  failed_migration_for_agents.txt  migration_operator.txt  pyproject.toml
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/.github/scripts/: change_scope.py  ci_git.py  version_policy.py
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/.github/tests/: test_change_scope.py  test_ci_git.py  test_version_policy.py
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/.github/workflows/: ci-reusable.yml  feature-branch.yml  release.yml  version-policy-reusable.yml
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch-local-ui/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch-local-ui/pack/: build.js  dev.js  sync-components.js  webpack.config.js
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch-local-ui/src/: index.js  styles.css
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch-local-ui/src/components/: AgentDetailsPage.jsx  AgentListPage.jsx  App.jsx  FunctionsCard.jsx  GitHubEventsReference.jsx  LLMCallCard.jsx  LLMConfigPage.jsx  LocalAgentTable.jsx  LocalHeader.jsx  LocalSidebar.jsx  MessageFeedCard.jsx  SendTestEventCard.jsx  TopicDetailsPage.jsx  TopicsPage.jsx
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch-local-ui/src/data/: github-events.json
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch-local-ui/src/templates/: index.html
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch_cli/: auth.py  auth_login.py  auth_provider.py  auth_session.py  http_client.py  keychain.py  logger.py  main.py  registry.py  secrets.py  utils.py  version.py  version_check.py
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch_cli/commands/: agent.py  llm.py  mcp.py  registry.py  router.py  secrets.py  skills.py
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch_cli/mcp/: README.md  __init__.py  client.py  config.py  e2e_validation.md  models.py
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch_cli/mcp/agent/: __init__.py  server.py  tools.py
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch_cli/mcp/operator/: __init__.py  server.py  tools.py
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch_cli/mcp/operator/prompts/: fork-session.md  getting-started.md
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch_cli/router/: __init__.py  llm_pricing.py  local_llm.py  models.py  requirements.txt  service.py
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch_cli/router/static/: components.js  index.html
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/dispatch_cli/templates/: extract_schemas.py  grpc_listener.py
TEST_SERVERS/PORTED_TO_SECUREMCP/dispatch_agents_cli/tests/: conftest.py  test_auth.py  test_auth_commands.py  test_auth_helpers.py  test_auth_login.py  test_cli.py  test_cli_cleanup.py  test_command_auth_guidance.py  test_keychain.py  test_local_llm_inference.py  test_local_llm_log.py  test_mcp_auth.py  test_mcp_integration.py  test_mcp_operator.py  test_secret_commands.py  test_secrets.py  test_source_package.py  test_utils.py
TEST_SERVERS/PORTED_TO_SECUREMCP/esp-rainmaker-mcp/: .gitlab-ci.yml  MODIFICATION.txt  README.md  client-test-macaw.py  pyproject.toml  server.py  test_mcp_server.py
TEST_SERVERS/PORTED_TO_SECUREMCP/iotdb-mcp-server/: .asf.yaml  README-zh.md  client-test-macaw.py  modification.txt  pyproject.toml
TEST_SERVERS/PORTED_TO_SECUREMCP/iotdb-mcp-server/src/iotdb_mcp_server/: __init__.py  config.py  server.py
TEST_SERVERS/PORTED_TO_SECUREMCP/k8s-mcp-server/: .dockerignore  .gitignore  CLAUDE.md  MIGRATION.txt  Makefile  README.md  client-test-macaw.py  codecov.yml  llms.txt  pyproject.toml
TEST_SERVERS/PORTED_TO_SECUREMCP/k8s-mcp-server/.github/workflows/: ci.yml  integration-tests.yml  release.yml
TEST_SERVERS/PORTED_TO_SECUREMCP/k8s-mcp-server/deploy/docker/: Dockerfile  docker-compose.yml  security_config.yaml
TEST_SERVERS/PORTED_TO_SECUREMCP/k8s-mcp-server/docs/: architecture.md  claude-integration.md  cloud-providers.md  environment-variables.md  getting-started.md  security.md  spec.md  supported-tools.md
TEST_SERVERS/PORTED_TO_SECUREMCP/k8s-mcp-server/src/k8s_mcp_server/: __init__.py  __main__.py  config.py  security.py  server.py
TEST_SERVERS/PORTED_TO_SECUREMCP/k8s-mcp-server/tests/integration/: test_k8s_tools.py
TEST_SERVERS/PORTED_TO_SECUREMCP/k8s-mcp-server/tests/unit/: conftest.py  test_config.py  test_k8s_tools.py  test_main.py  test_security.py  test_server.py  test_tool_specific.py
(+350 files in other folders)
