[project]
name = "dispatch-cli"
version = "0.9.4"
description = ""
authors = [
    {name = "Diamond Bishop", email = "diamond.bishop@datadoghq.com"},
    {name = "Matt Pillari", email = "matthew.pillari@datadoghq.com"},
    {name = "Jacob LeGrone", email = "jacob.legrone@datadoghq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.16.1",
    "rich",
    "toml",
    "requests>=2.32.5",
    "tomlkit>=0.13.3",
    "black>=25.11.0",
    "isort>=6.1.0",
    "requests-toolbelt>=1.0.0",
    "dispatch_agents",
    "aiohttp>=3.13.3",
    "fastapi>=0.118.3",
    "grpcio>=1.78.0",
    "uvicorn>=0.38.0",
    "types-toml>=0.10.8.20240310",
    "mcp>=1.26.0",
    "packaging>=24.2",
    "platformdirs>=4.5.1",
    "watchfiles>=1.1.1",
    "protobuf==6.33.5",
    "questionary>=2.0.1",
    "pathspec>=1.0.4",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.18.2",
    "ruff>=0.8.0",
    "types-PyYAML",
    "types-requests",
    "pytest-cov>=7.0.0",
]

[project.scripts]
dispatch = "dispatch_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dispatch_cli"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers"
]
markers = [
    "unit: marks tests as unit tests (fast)",
    "integration: marks tests as integration tests (slower)", 
    "e2e: marks tests as end-to-end tests (slowest)"
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B007",  # unused loop control variable
    "B008",  # do not perform function calls in argument defaults
    "B023",  # function does not bind loop variable
    "B904",  # raise ... from err
    "B905",  # zip() without explicit strict parameter
    "C403",  # unnecessary list comprehension
    "C416",  # unnecessary dict comprehension
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "E402",  # module level import not at top of file
    "F822",  # undefined name in __all__
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "agents.agents",
    "agent_registry",
    "auth.service",
    "infrastructure.factory",
    "infrastructure.test_interfaces",
    "scripts.deploy_ecs_fargate",
    "api.unstable.agents",
    "api.unstable.memory",
    "main",
]
disable_error_code = ["no-any-return", "attr-defined", "arg-type", "return-value", "dict-item", "union-attr", "assignment", "list-item", "operator"]
