[project]
name = "esp-rainmaker-mcp"
version = "0.2.0"
description = "MCP wrapper for ESP-Rainmaker CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "esp-rainmaker-cli>=1.5.3,<2.0.0",
    "mcp[cli]>=1.6.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "server.py",
    "README.md",
    "LICENSE"
]
