[project]
name = "iotdb-mcp-server"
packages = [{ include = "src/iotdb_mcp_server" }]
version = "0.2.0"
description = "A Model Context Protocol (MCP) server that enables secure interaction with IoTDB databases. This server allows AI assistants to list tables, read data, and execute SQL queries through a controlled interface, making database exploration and analysis safer and more structured."
readme = "README.md"
license = "Apache-2.0"
license-file="LICENSE"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.8.1",
    "apache-iotdb>=2.0.4",
    "openpyxl>=3.1.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "venv",
    ".git",
    ".gitignore"
]

[tool.uv]
dev-dependencies = [
  "pyright",
  "black",
  "flake8",
]

[project.scripts]
iotdb-mcp-server = "iotdb_mcp_server:main"
